--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.24.7",
     "flowbite-react": "^0.11.7",
     "next": "15.1.7",
     "react": "^19.0.0",
