--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@tinymce/tinymce-react": "^6.1.0",
     "antd": "^5.24.7",
     "flowbite-react": "^0.11.7",
     "next": "15.1.7",
